self-hosted-services/filebrowser/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser-service
  namespace: filebrowser
  labels:
    app.kubernetes.io/name: filebrowser
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: filebrowser
