self-hosted-services/filebrowser/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: filebrowser-route
  namespace: filebrowser
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: crobceratops-gateway
      namespace: gateways
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: crobasaurusrex-gateway
      namespace: gateways
  hostnames:
    - filebrowser.crobceratops.ryanbeales.com
    - filebrowser.crobasaurusrex.ryanbeales.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: filebrowser-service
          port: 80
          weight: 1
